force-app/main/default/objects/Form_Review_Config__mdt/Form_Review_Config__mdt.object-meta.xml
<CustomObject>
    <label>Form Review Config</label>
    <pluralLabel>Form Review Configs</pluralLabel>
</CustomObject>