force-app/main/default/objects/Form_Review_Config__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Human\-readable description of this configuration for documentation purposes. Explains what form this config is for and any special notes.</description>
    <inlineHelpText>Describe the purpose of this configuration and any special considerations</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>