force-app/main/default/objects/Form_Review_Config__mdt/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <description>Identifier for the form/application type this configuration applies to. Used to categorize and filter configurations (e.g., MAEOED\Proposal, License\_Application, Grant\_Request).</description>
    <inlineHelpText>Enter a unique identifier for the form type (e.g., MAEOED\_Proposal)</inlineHelpText>
    <label>Form Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>