force-app/main/default/objects/Form_Review_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether this configuration is active and should be used by the Review Summary component. Inactive configurations are ignored by DataRaptor queries.</description>
    <inlineHelpText>Uncheck to disable this configuration without deleting it</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>