force-app/main/default/objects/Form_Review_Config__mdt/fields/Label_JSON__c.field-meta.xml
<CustomField>
    <fullName>Label_JSON__c</fullName>
    <description>JSON configuration that defines which fields to display, their labels, section/block titles, and formatting types (phone, email, currency, date, boolean, number). The JSON structure determines the rendering order in the Review Summary component.</description>
    <inlineHelpText>Enter valid JSON. Use _sectionTitle for section headers, _blockTitle for block headers. For explicit formatting, use object syntax: { &quot;label&quot;: &quot;Label&quot;, &quot;type&quot;: &quot;phone&quot; }</inlineHelpText>
    <label>Label JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>